# personal_website

./: 0_home.py  README.md  config.toml  debug_scraper.py  load_style.py  main.py  pyproject.toml
.streamlit/: config.toml
pages/: 1_Featured_projects.py  1_featured_projects.py  2_Research.py  2_research.py  2_research_experience.py  3_Presentations.py  3_presentations.py
